--- a/api/package.json
+++ b/api/package.json
@@ -1,6 +1,8 @@
 {
+  "license": "MIT",
   "dependencies": {
     "apollo-server": "^2.11.0",
+    "dotenv": "^8.2.0",
     "graphql": "^14.6.0",
     "graphql-import": "^1.0.0-beta.2",
     "pg": "^7.18.2",
