--- a/api/package.json
+++ b/api/package.json
@@ -5,6 +5,7 @@
     "dotenv": "^8.2.0",
     "graphql": "^14.6.0",
     "graphql-import": "^1.0.0-beta.2",
+    "moment": "^2.24.0",
     "pg": "^7.18.2",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.5",
