--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,8 +9,8 @@ jobs:
       - checkout
       - node/with-cache:
           steps:
-            - run: npm install
-            - run: npm test
+            - run: cd api && npm install
+            - run: cd api && npm test
 workflows:
     build-and-test:
       jobs:
