--- a/api/.circleci/config.yml
+++ b/api/.circleci/config.yml
@@ -9,8 +9,9 @@ jobs:
       - checkout
       - node/with-cache:
           steps:
-            - run: cd api && npm install
-            - run: cd api && npm test
+            - run: npm install
+            - run: npm install -g cross-env
+            - run: npm test
 workflows:
     build-and-test:
       jobs:
