--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,7 @@ jobs:
       - node/with-cache:
           steps:
             - run: cd api && npm install
+            - run: npm install -g cross-env
             - run: cd api && npm test
 workflows:
     build-and-test:
