--- a/api/package.json
+++ b/api/package.json
@@ -2,6 +2,7 @@
   "license": "MIT",
   "dependencies": {
     "apollo-server": "^2.11.0",
+    "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "faker": "^4.1.0",
     "graphql": "^14.6.0",
