--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,10 +11,10 @@ jobs:
           steps:
             - run: cd api && npm install
             - run: |
-                sudo apt-get install wget ca-certificates
+                sudo apt-get -y install wget ca-certificates
                 wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
                 sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt/ `lsb_release -cs`-pgdg main" >> /etc/apt/sources.list.d/pgdg.list'
-                sudo apt-get install postgresql postgresql-contrib
+                sudo apt-get -y install postgresql postgresql-contrib
             - run: |
                 sudo su - postgres
                 psql -c "CREATE ROLE your_username WITH LOGIN CREATEDB ENCRYPTED PASSWORD '$DBPASSWORD';"
