--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,15 +10,20 @@ jobs:
       - node/with-cache:
           steps:
             - run: cd api && npm install
+            - run: 
+              environment:
+                TZ: America/Vancouver
+              command:  |
+                  ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+                  apt-get update
+                  apt-get -y install wget ca-certificates gnupg2 lsb-release
+                  wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add -
+                  sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt/ `lsb_release -cs`-pgdg main" >> /etc/apt/sources.list.d/pgdg.list'
+                  apt-get -y install postgresql postgresql-contrib
             - run: |
-                sudo apt-get -y install wget ca-certificates
-                wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
-                sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt/ `lsb_release -cs`-pgdg main" >> /etc/apt/sources.list.d/pgdg.list'
-                sudo apt-get -y install postgresql postgresql-contrib
-            - run: |
-                sudo su - postgres
-                psql -c "CREATE ROLE your_username WITH LOGIN CREATEDB ENCRYPTED PASSWORD '$DBPASSWORD';"
-                su - root
+                su - postgres
+                service postgresql start
+                psql -c "CREATE ROLE kalendar WITH LOGIN CREATEDB ENCRYPTED PASSWORD '$DBPASSWORD';"
                 createdb kalendar_test
                 sequelize db:migrate
             - run: cd api && npm test
