--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
           steps:
             - run: cd api && npm install
             - run: |
-                sudo ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && sudo echo $TZ > /etc/timezone                
+                sudo ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $tz | sudo tee /etc/timezone
                 sudo apt-get update
                 sudo apt-get -y install wget ca-certificates gnupg2 lsb-release
                 wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
