--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
             - run: cd api && npm install
             - run: |
                 sudo ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $tz | sudo tee /etc/timezone
-                sudo apt-get update
+                sudo apt-get update -y
                 sudo apt-get -y install wget ca-certificates gnupg2 lsb-release
                 wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
                 sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt/ `lsb_release -cs`-pgdg main" >> /etc/apt/sources.list.d/pgdg.list'
