--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
                 sudo apt-get -y install wget ca-certificates gnupg2 lsb-release
                 wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
                 sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt/ `lsb_release -cs`-pgdg main" >> /etc/apt/sources.list.d/pgdg.list'
-                sudo apt-get -y install postgresql postgresql-contrib
+                sudo apt-get -y install postgresql-10.4 postgresql-contrib
             - run: |
                 sudo service postgresql start
                 su - postgres
