--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
                 sudo service postgresql start
                 sudo su - postgres -c "psql -c \"CREATE ROLE kalendar WITH LOGIN CREATEDB ENCRYPTED PASSWORD '$DBPASSWORD';\""
                 sudo su - postgres -c "createdb kalendar_test"
-                npx sequelize db:migrate
+                sequelize db:migrate
             - run: cd api && npm test
 workflows:
   build-and-test:
