--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,7 @@ jobs:
                 sudo service postgresql start
                 sudo su - postgres -c "psql -c \"CREATE ROLE kalendar WITH LOGIN CREATEDB ENCRYPTED PASSWORD '$DBPASSWORD';\""
                 sudo su - postgres -c "createdb kalendar_test"
+                sudo npm install -g sequelize sequelize-cli
                 sequelize db:migrate
             - run: cd api && npm test
 workflows:
